--- a/Baha'i/Baha/GL/p003-346.html
+++ b/Baha'i/Baha/GL/p003-346.html
@@ -2816,7 +2816,7 @@
 </tr>
 <tr>
 	<td><a name="para284"></a>
-	<a name="LXXIII"/><span style="background-color: #ffffCC" TITLE="Section 73 (Tablet to Mírzá Hádí)">LXXIII</span>.  It is clear and evident that when the veils that conceal the realities of the manifestations of the Names and Attributes of God, nay of all created things visible or invisible, have been rent asunder, nothing except the Sign of God will remain--a sign which He, Himself, hath placed within these realities. This sign will endure as long as is the wish of the Lord thy God, the Lord of the heavens and of the <a name="p141"></a>earth.  If such be the blessings conferred on all created things, how superior must be the destiny of the true believer, whose existence and life are to be regarded as the originating purpose of all creation.  Just as the conception of faith hath existed from the beginning that hath no beginning, and will endure till the end that hath no end, in like manner will the true believer eternally live and endure.  His spirit will everlastingly circle round the Will of God.  He will last as long as God, Himself, will last.  He is revealed through the Revelation of God, and is hidden at His bidding.  It is evident that the loftiest mansions in the Realm of Immortality have been ordained as the habitation of them that have truly believed in God and in His signs.  Death can never invade that holy seat.  Thus have We entrusted thee with the signs of thy Lord, that thou mayest persevere in thy love for Him, and be of them that comprehend this truth. 
+	<a name="LXXIII"/><span style="background-color: #ffffCC" TITLE="Section 73 (Tablet to Mírzá Hádí-i-Qazvíní, 15th Letter of the Living)">LXXIII</span>.  It is clear and evident that when the veils that conceal the realities of the manifestations of the Names and Attributes of God, nay of all created things visible or invisible, have been rent asunder, nothing except the Sign of God will remain--a sign which He, Himself, hath placed within these realities. This sign will endure as long as is the wish of the Lord thy God, the Lord of the heavens and of the <a name="p141"></a>earth.  If such be the blessings conferred on all created things, how superior must be the destiny of the true believer, whose existence and life are to be regarded as the originating purpose of all creation.  Just as the conception of faith hath existed from the beginning that hath no beginning, and will endure till the end that hath no end, in like manner will the true believer eternally live and endure.  His spirit will everlastingly circle round the Will of God.  He will last as long as God, Himself, will last.  He is revealed through the Revelation of God, and is hidden at His bidding.  It is evident that the loftiest mansions in the Realm of Immortality have been ordained as the habitation of them that have truly believed in God and in His signs.  Death can never invade that holy seat.  Thus have We entrusted thee with the signs of thy Lord, that thou mayest persevere in thy love for Him, and be of them that comprehend this truth. 
 	<p>
 	</td>
 	<td VALIGN=top><small>
@@ -3186,7 +3186,7 @@
 </tr>
 <tr>
 	<td><a name="para322"></a>
-	<a name="p164"/><a name="LXXXIII"/><span style="background-color: #ffffCC" TITLE="Section 83 (Tablet to Mírzá Hádí)">LXXXIII</span>.  Consider the rational faculty with which God hath endowed the essence of man.  Examine thine own self, and behold how thy motion and stillness, thy will and purpose, thy sight and hearing, thy sense of smell and power of speech, and whatever else is related to, or transcendeth, thy physical senses or spiritual perceptions, all proceed from, and owe their existence to, this same faculty.  So closely are they related unto it, that if in less than the twinkling of an eye its relationship to the human body be severed, each and every one of these senses will cease immediately to exercise its function, and will be deprived of the power to manifest the evidences of its activity.  It is indubitably clear and evident that each of these afore-mentioned instruments has depended, and will ever continue to depend, for its proper functioning on this rational faculty, which should be regarded as a sign of the revelation of Him Who is the sovereign Lord of all.  Through its manifestation all these names and attributes have been revealed, and by the suspension of its action they are all destroyed and perish. 
+	<a name="p164"/><a name="LXXXIII"/><span style="background-color: #ffffCC" TITLE="Section 83 (Tablet to Mírzá Hádí-i-Qazvíní, 15th Letter of the Living)">LXXXIII</span>.  Consider the rational faculty with which God hath endowed the essence of man.  Examine thine own self, and behold how thy motion and stillness, thy will and purpose, thy sight and hearing, thy sense of smell and power of speech, and whatever else is related to, or transcendeth, thy physical senses or spiritual perceptions, all proceed from, and owe their existence to, this same faculty.  So closely are they related unto it, that if in less than the twinkling of an eye its relationship to the human body be severed, each and every one of these senses will cease immediately to exercise its function, and will be deprived of the power to manifest the evidences of its activity.  It is indubitably clear and evident that each of these afore-mentioned instruments has depended, and will ever continue to depend, for its proper functioning on this rational faculty, which should be regarded as a sign of the revelation of Him Who is the sovereign Lord of all.  Through its manifestation all these names and attributes have been revealed, and by the suspension of its action they are all destroyed and perish. 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -4772,7 +4772,8 @@
 	<a name="CXV"/><span style="background-color: #ffffCC" TITLE="Section 115">CXV</span>.  The Pen of Revelation, O <span style="background-color: #ffffCC" TITLE="Ishmael, famous Bahá'í and brother of Mírzá Jání of Káshán (see The Dawn-Breakers). Given this title (sacrifice) by Bahá'u'lláh.">Dhabíh</span>, hath, in most of the divinely-revealed Tablets, recorded these words:  We have admonished all the loved ones of God to take heed lest the hem of Our sacred vesture be smirched with the mire of unlawful deeds, or be stained with the dust of reprehensible conduct.  We have, moreover, exhorted them to fix their gaze upon whatsoever hath been revealed in Our Tablets.  Had <a name="p241"></a>their inner ears been attentive to the Divine counsels which have shone forth from the Day Spring of the Pen of the All-Merciful, and hearkened unto His Voice, most of the peoples of the earth would have by now been adorned with the ornament of His guidance. What had been pre-ordained, however, hath come to pass. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Dhabíh] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p142-169Ch08.html#para39">p. 168</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">241</DIV></center></small></td>
 </tr>
@@ -4808,7 +4809,8 @@
 	Behold, O <span style="background-color: #ffffCC" TITLE="Ishmael, famous Bahá'í and brother of Mírzá Jání of Káshán (see The Dawn-Breakers). Given this title (sacrifice) by Bahá'u'lláh.">Dhabíh</span>, the works which God, the Sovereign Truth, hath wrought.  Say thou:  How great, how very great, is the power of His might that encompasseth all worlds!  Exalted, immeasurably exalted, is His detachment above the reach and ken of the entire creation!  Glorified, glorified be His meekness--a meekness that hath melted the hearts of them that have been brought nigh unto God! 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Dhabíh] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p142-169Ch08.html#para39">p. 168</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -4844,7 +4846,8 @@
 	The imprisonment inflicted on this wronged One, <a name="p244"></a>O <span style="background-color: #ffffCC" TITLE="Ishmael, famous Bahá'í and brother of Mírzá Jání of Káshán (see The Dawn-Breakers). Given this title (sacrifice) by Bahá'u'lláh.">Dhabíh</span>, did to Him no harm nor can it ever do so; nor can the loss of all His earthly goods, His exile, or even His martyrdom and outward humiliation, do Him any hurt.  That which can hurt Him are the evil deeds which the beloved of God commit, and which they impute to Him Who is the Sovereign Truth. This is the affliction from which I suffer, and to this He, Himself, Who is potent over all things, beareth Me witness.  That which hath sorely hurt Me are the claims which the people of the <span style="background-color: #ffffCC" TITLE="The greatest doctrinal work of the Founder of the Bábí Dispensation (literally 'Exposition').">Bayán</span> are advancing every day.  Some have proclaimed their allegiance to one of My Branches (Sons), while others have asserted independently their claims, and acted after their own desires. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Dhabíh] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p142-169Ch08.html#para39">p. 168</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">244</DIV></center></small></td>
 </tr>
@@ -4854,6 +4857,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	[Dhabíh] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p142-169Ch08.html#para39">p. 168</a><p>
 	["all the Dispensations of the past..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html#p308">p. 308</a>, <a href="../../Others/ROB/V1/p294-314Ch18.html#p312">p. 312</a><p>
 	["Whoso layeth claim..."] see <a href="p003-346.html#CLXVI">CLXVI</a><p>
 	[next manifestation] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p133-146Ch07.html#p142">p. 142</a>
@@ -4884,7 +4888,8 @@
 	<p>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Dhabíh] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p142-169Ch08.html#para39">p. 168</a><p>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">246</DIV></center></small></td>
 </tr>
@@ -5262,7 +5267,7 @@
 </tr>
 <tr>
 	<td><a name="para536"></a>
-	<a name="CXXIV"/><span style="background-color: #ffffCC" TITLE="Section 124 (Tablet to Mírzá Hádí)">CXXIV</span>.  How wondrous is the unity of the Living, the Ever-Abiding God--a unity which is exalted above all limitations, that transcendeth the comprehension of all created things!  He hath, from everlasting, dwelt in His inaccessible habitation of holiness and glory, and will unto everlasting continue to be enthroned upon the heights of His independent sovereignty and grandeur.  How lofty hath been His incorruptible Essence, how completely independent of the knowledge of all created things, and how immensely <a name="p262"></a>exalted will it remain above the praise of all the inhabitants of the heavens and the earth! 
+	<a name="CXXIV"/><span style="background-color: #ffffCC" TITLE="Section 124 (Tablet to Mírzá Hádí-i-Qazvíní, 15th Letter of the Living)">CXXIV</span>.  How wondrous is the unity of the Living, the Ever-Abiding God--a unity which is exalted above all limitations, that transcendeth the comprehension of all created things!  He hath, from everlasting, dwelt in His inaccessible habitation of holiness and glory, and will unto everlasting continue to be enthroned upon the heights of His independent sovereignty and grandeur.  How lofty hath been His incorruptible Essence, how completely independent of the knowledge of all created things, and how immensely <a name="p262"></a>exalted will it remain above the praise of all the inhabitants of the heavens and the earth! 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -5847,7 +5852,8 @@
 	<a name="CXXXV"/><span style="background-color: #ffffCC" TITLE="Section 135">CXXXV</span>.  O Letter of the Living!  The ear of God hath heard thy cry, and His eyes have beheld thy written supplication.  He is calling thee from His seat of glory, and is revealing unto thee the verses that have been sent down by Him Who is the Help in Peril, the Self-Subsisting. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/BabsAutographTablets.html">Báb's Tablets Addressed To The Letters Of The Living</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -6069,7 +6075,8 @@
 	<a name="CXXXIX"/><span style="background-color: #ffffCC" TITLE="Section 139">CXXXIX</span>.  Let thine ear be attentive, O <span style="background-color: #ffffCC" TITLE="The Bahá'í title of Muhammad-i-Zarandí, a devoted follower of the Báb and Bahá'u'lláh, author of the historical work known as 'Nabíl's Narrative.'">Nabíl-i-A'zam</span>, to the Voice of the <span style="background-color: #ffffCC" TITLE="A title of God, peculiar in the Bible to the Book of Daniel.">Ancient of Days</span>, crying to thee from the Kingdom of His all-glorious Name. He it is Who is now proclaiming from the realms above, and within the inmost essence of all created things:  "I truly am God, there is none other God but Me.  I am He Who, from everlasting, hath been the Source of all sovereignty and power, He Who shall continue, throughout eternity, to exercise His kingship and to extend His protection unto all created things.  My proof is the greatness of My might and My sovereignty that embraceth the whole of creation."...
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plxii">lxii</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
