--- a/Baha'i/Baha/KA/p001-011Intro.html
+++ b/Baha'i/Baha/KA/p001-011Intro.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="Preface.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p012-018Desc.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -52,8 +52,8 @@
 <tr>
        <td>
 	   the ultimate aim of the laws of religion. <i>"Think not"</i>, is Bahá'u'lláh's own assertion, <i>"that We have revealed unto you a mere code of laws. Nay, rather, We have unsealed the choice Wine with the fingers of might and power."</i> His Book of Laws is His <i>"weightiest testimony unto all people, and the proof of the All-Merciful unto all who are in heaven and all who are on earth"</i>.<p>
-	   An introduction to the spiritual universe unveiled in the Kitáb-i-Aqdas would fail in its purpose if it did not acquaint the reader with the interpretive and legislative institutions that Bahá'u'lláh has indissolubly linked with the system of law thus revealed. At the foundation of this guidance lies the unique role which Bahá'u'lláh's Writings--indeed the text of the Kitáb-i-Aqdas itself--confer on His eldest son, `Abdu'l-Bahá. This unique figure is at once the Exemplar of the pattern of life taught by His Father, the divinely inspired authoritative interpreter of His Teachings and the Centre and Pivot of the Covenant which the Author of the Bahá'í Revelation made with all who recognize Him. The twenty-nine years of `Abdu'l-Bahá's ministry endowed the Bahá'í world with a luminous body of commentary that opens multiple vistas of understanding on His Father's purpose.<p>
-	   In His Will and Testament `Abdu'l-Bahá conferred the mantle of Guardian of the Cause and infallible Interpreter of its teachings upon His eldest grandson, Shoghi Effendi, and confirmed the authority and guarantee of divine guidance decreed by Bahá'u'lláh for the Universal House of Justice on all matters <i>"which have not outwardly been revealed in the Book"</i>. The Guardianship and the Universal House of Justice can thus be seen to be, in the words of Shoghi Effendi, the "Twin Successors" of Bahá'u'lláh and `Abdu'l-Bahá. They are the supreme institutions of the Administrative Order which was rounded and anticipated in the Kitáb-i-Aqdas and elaborated by `Abdu'l-Bahá in His Will.<p>
+	   An introduction to the spiritual universe unveiled in the Kitáb-i-Aqdas would fail in its purpose if it did not acquaint the reader with the interpretive and legislative institutions that Bahá'u'lláh has indissolubly linked with the system of law thus revealed. At the foundation of this guidance lies the unique role which Bahá'u'lláh's Writings--indeed the text of the Kitáb-i-Aqdas itself--confer on His eldest son, 'Abdu'l-Bahá. This unique figure is at once the Exemplar of the pattern of life taught by His Father, the divinely inspired authoritative interpreter of His Teachings and the Centre and Pivot of the Covenant which the Author of the Bahá'í Revelation made with all who recognize Him. The twenty-nine years of 'Abdu'l-Bahá's ministry endowed the Bahá'í world with a luminous body of commentary that opens multiple vistas of understanding on His Father's purpose.<p>
+	   In His Will and Testament 'Abdu'l-Bahá conferred the mantle of Guardian of the Cause and infallible Interpreter of its teachings upon His eldest grandson, Shoghi Effendi, and confirmed the authority and guarantee of divine guidance decreed by Bahá'u'lláh for the Universal House of Justice on all matters <i>"which have not outwardly been revealed in the Book"</i>. The Guardianship and the Universal House of Justice can thus be seen to be, in the words of Shoghi Effendi, the "Twin Successors" of Bahá'u'lláh and 'Abdu'l-Bahá. They are the supreme institutions of the Administrative Order which was rounded and anticipated in the Kitáb-i-Aqdas and elaborated by 'Abdu'l-Bahá in His Will.<p>
 	   During the thirty-six years of his ministry, Shoghi Effendi raised up the structure of elected Spiritual Assem-
 	   </td>
        <td></td>
@@ -61,8 +61,8 @@
 </tr>
 <tr>
        <td>
-	   blies--the Houses of Justice referred to in the Kitáb-i-Aqdas, now in their embryonic stage--and with their collaboration initiated the systematic implementation of the Divine Plan that `Abdu'l-Bahá had laid out for the diffusion of the Faith throughout the world. He also set in motion, on the basis of the strong administrative structure that had been established, the processes which were an essential preparation for the election of the Universal House of Justice. This body, which came into existence in April 1963, is elected through secret ballot and plurality vote in a three-stage election by adult Bahá'ís throughout the world. The revealed Word of Bahá'u'lláh, together with the interpretations and expositions of the Centre of the Covenant and the Guardian of the Cause, constitute the binding terms of reference of the Universal House of Justice and are its bedrock foundation.<p>
-	   As to the laws themselves, a careful scrutiny discloses that they govern three areas: the individual's relationship to God, physical and spiritual matters which benefit the individual directly, and relations among individuals and between the individual and society. They can be grouped under the following headings: prayer and fasting laws of personal status governing marriage, divorce and inheritance; a range of other laws, ordinances and prohibitions, as well as exhortations; and the abrogation of specific laws and ordinances of previous Dispensations. A salient characteristic is their brevity. They constitute the kernel of a vast range of law that will arise in centuries to come. This elaboration of the law will be enacted by the Universal House of Justice under the authority conferred upon it by Bahá'u'lláh Himself. In one of His Tablets `Abdu'l-Bahá elucidates this principle:<p>
+	   blies--the Houses of Justice referred to in the Kitáb-i-Aqdas, now in their embryonic stage--and with their collaboration initiated the systematic implementation of the Divine Plan that 'Abdu'l-Bahá had laid out for the diffusion of the Faith throughout the world. He also set in motion, on the basis of the strong administrative structure that had been established, the processes which were an essential preparation for the election of the Universal House of Justice. This body, which came into existence in April 1963, is elected through secret ballot and plurality vote in a three-stage election by adult Bahá'ís throughout the world. The revealed Word of Bahá'u'lláh, together with the interpretations and expositions of the Centre of the Covenant and the Guardian of the Cause, constitute the binding terms of reference of the Universal House of Justice and are its bedrock foundation.<p>
+	   As to the laws themselves, a careful scrutiny discloses that they govern three areas: the individual's relationship to God, physical and spiritual matters which benefit the individual directly, and relations among individuals and between the individual and society. They can be grouped under the following headings: prayer and fasting laws of personal status governing marriage, divorce and inheritance; a range of other laws, ordinances and prohibitions, as well as exhortations; and the abrogation of specific laws and ordinances of previous Dispensations. A salient characteristic is their brevity. They constitute the kernel of a vast range of law that will arise in centuries to come. This elaboration of the law will be enacted by the Universal House of Justice under the authority conferred upon it by Bahá'u'lláh Himself. In one of His Tablets 'Abdu'l-Bahá elucidates this principle:<p>
 	   <blockquote><i>Those matters of major importance which constitute the foundation of the Law of God are explicitly recorded in the Text, but subsidiary laws are left to the House of Justice. The wisdom of this is that the times never remain the same, for</i></blockquote>
 	   </td>
        <td></td>
@@ -93,7 +93,7 @@
        <td>
 	   <blockquote>abrogate the provisions of so fundamental and sacred a Book.</blockquote>
 	   The number of laws binding on Bahá'ís is not increased by the publication of this translation. When it is deemed timely,  the Bahá'í community will be advised which additional  laws  are  binding  upon  believers,  and  any guidance or supplementary legislation necessary for their application will be provided.<p>
-	   In general, the laws of the Kitáb-i-Aqdas are stated succinctly. An example of this conciseness can be seen in the fact that many are expressed only as they apply to a man, but it is apparent from the Guardian's writings that, where Bahá'u'lláh has given a law as between a man and a woman, it applies <i><span TITLE="Application of laws equally to both sexes.">mutatis mutandis</span></i> between a woman and a man unless the context makes this impossible. For example, the text of the Kitáb-i-Aqdas forbids a man to marry his father's wife (i.e. his stepmother), and the Guardian has indicated that likewise a woman is forbidden to marry her stepfather. This understanding of the implications of the Law has far-reaching effects in light of the fundamental Bahá'í principle of the equality of the sexes, and should be borne in mind when the sacred Text is studied. That men and women differ from one another in certain characteristics and functions is an inescapable fact of nature and makes possible their complementary roles in certain areas of the life of society; but it is significant that `Abdu'l-Bahá has stated that in this Dispensation <i>"Equality of men and women, except in some negligible instances, has been fully, and categorically announced."</i><p>
+	   In general, the laws of the Kitáb-i-Aqdas are stated succinctly. An example of this conciseness can be seen in the fact that many are expressed only as they apply to a man, but it is apparent from the Guardian's writings that, where Bahá'u'lláh has given a law as between a man and a woman, it applies <i><span TITLE="Application of laws equally to both sexes.">mutatis mutandis</span></i> between a woman and a man unless the context makes this impossible. For example, the text of the Kitáb-i-Aqdas forbids a man to marry his father's wife (i.e. his stepmother), and the Guardian has indicated that likewise a woman is forbidden to marry her stepfather. This understanding of the implications of the Law has far-reaching effects in light of the fundamental Bahá'í principle of the equality of the sexes, and should be borne in mind when the sacred Text is studied. That men and women differ from one another in certain characteristics and functions is an inescapable fact of nature and makes possible their complementary roles in certain areas of the life of society; but it is significant that 'Abdu'l-Bahá has stated that in this Dispensation <i>"Equality of men and women, except in some negligible instances, has been fully, and categorically announced."</i><p>
 	   Mention has already been  made of the intimate relationship between the Kitáb-i-Aqdas and the Holy Books of previous Dispensations. Especially close is the relationship to the Bayán, the Book of Laws revealed by the Báb. It is elucidated in the following excerpts from letters written on behalf of the Guardian:<p>
 	   </td>
        <td></td>
@@ -118,7 +118,7 @@
 <tr>
        <td>
 	   <blockquote>of His Most Holy Book. These were recorded in unnumbered Tablets, which He continued to reveal until the last days of His earthly life . . .</blockquote>
-	   Among such works is the Questions and Answers, a compilation made by Zaynu'l-Muqarrabin, the most eminent of the transcribers of Bahá'u'lláh's Writings. Consisting of answers revealed by Bahá'u'lláh to questions put to Him by various believers, it constitutes an invaluable appendix to the Kitáb-i-Aqdas. In 1978 the most note-worthy of the other Tablets of this nature were published in English as a compilation entitled <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>.<p>
+	   Among such works is the Questions and Answers, a compilation made by Zaynu'l-Muqarrabin, the most eminent of the transcribers of Bahá'u'lláh's Writings. Consisting of answers revealed by Bahá'u'lláh to questions put to Him by various believers, it constitutes an invaluable appendix to the Kitáb-i-Aqdas. In 1978 the most note-worthy of the other Tablets of this nature were published in English as a compilation entitled <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>.<p> 
 	   Some years after the revelation of the Kitáb-i-Aqdas, Bahá'u'lláh had manuscript copies sent to Bahá'ís in Iran, and in the year 1308 A.H. (1890--91 A.D.), towards the end of His life, He arranged for the publication of the original Arabic text of the Book in Bombay.<p>
 	   A word should be said about the style of language in which the Kitáb-i-Aqdas has been rendered into English. Bahá'u'lláh enjoyed a superb mastery of Arabic,  and preferred to use it in those Tablets and other Writings where its precision of meaning was particularly appropriate to the exposition of basic principle. Beyond the choice of language itself, however, the style employed is of an exalted and emotive character, immensely compelling, particularly to those familiar with the great literary tradition out of which it arose. In taking up his task of translation, Shoghi Effendi faced the challenge of finding an English style which would not only faithfully convey the exactness of the text's meaning, but would also evoke in the reader the spirit of meditative reverence which is a distinguishing feature of response to the original. The form of expression he selected, reminiscent of the style used by the seventeenth-century translators of the Bible, captures the elevated mode of
 	   </td>
@@ -155,7 +155,7 @@
        <td>
 	   	   <FORM ACTION="Preface.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -163,12 +163,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p012-018Desc.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
