--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -171,7 +171,7 @@
 <tr>
        <td>
 	   I have turned my face unto Thee, O my Lord!  Illumine it with the light of Thy countenance.  Protect it, then, from turning to any one but Thee.
-	   <blockquote><i>Then let him stand up, and facing the Qiblih (Point of Adoration, i.e. Bahjí, `Akká), let him say:</i></blockquote>
+	   <blockquote><i>Then let him stand up, and facing the Qiblih (Point of Adoration, i.e. Bahjí, 'Akká), let him say:</i></blockquote>
 	   God testifieth that there is none other God but Him.  His are the kingdoms of Revelation and of creation.  He, in truth, hath manifested Him Who is the Dayspring of Revelation, Who conversed on Sinai, through Whom the Supreme Horizon hath been made to shine, and the Lote-Tree beyond which there is no passing hath spoken, and through Whom the call hath been proclaimed unto all who are in heaven and on earth:  "Lo, the All-Possessing is come.  Earth and heaven, glory and dominion are God's, the Lord of all men, and the Possessor of the Throne on high and of earth below!"
 	   <blockquote><i>Let him, then, bend down, with hands resting on the knees, and say:</i></blockquote>
 	   Exalted art Thou above my praise and the praise of anyone beside me, above my description and the description of all who are in heaven and all who are on earth!
