--- a/Baha'i/Baha/KA/p141-164Synopsis.html
+++ b/Baha'i/Baha/KA/p141-164Synopsis.html
@@ -47,7 +47,7 @@
 <tr>
        <td><h3><center>SUMMARY OF CONTENTS</center></h3> 
 	   <ol type=I start="" title="">
-	   <li>THE APPOINTMENT OF `ABDU'L-BAHÁ AS THE SUCCESSOR OF BAHÁ'U'LLÁH AND INTERPRETER OF HIS TEACHINGS</li>
+	   <li>THE APPOINTMENT OF 'ABDU'L-BAHÁ AS THE SUCCESSOR OF BAHÁ'U'LLÁH AND INTERPRETER OF HIS TEACHINGS</li>
  	   </ol>
 	   <blockquote>
 	   <ol type=A start="" title="" compact>
@@ -87,7 +87,7 @@
 <tr>
        <td><h3><center>SYNOPSIS AND CODIFICATION</center></h3> 
 	   <ol type=I start="" title="">
-	   <li>THE APPOINTMENT OF `ABDU'L-BAHÁ AS THE SUCCESSOR OF BAHÁ'U'LLÁH AND INTERPRETER OF HIS TEACHINGS</li>
+	   <li>THE APPOINTMENT OF 'ABDU'L-BAHÁ AS THE SUCCESSOR OF BAHÁ'U'LLÁH AND INTERPRETER OF HIS TEACHINGS</li>
  	   </ol>
 	   <blockquote>
 	   <ol type=A start="" title="" compact>
