--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -1885,10 +1885,10 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 <tr>
 	  <td>
 	  <b><a name="note171"/>171. the "mystery of the Great Reversal in the Sign of the Sovereign" <a href="p019-088Aqdas.html#para157">&para;157</a></b><p>
-	  Shaykh Ahmad-i-Ahsá'í (1753-1831), who was the founder of the Shaykhí School and the first of the "twin luminaries that heralded the advent of the Faith of the Báb", prophesied that at the appearance of the Promised One all things would be reversed, the last would be first, the first <a name="p240"/> last. Bahá'u'lláh in one of His Tablets refers to the <i>"symbol and allusion"</i> of the <i>"mystery of the Great Reversal in the Sign of the Sovereign"</i>. He states: <i>"Through this reversal He hath caused the exalted to be abased and the abased to be exalted"</i>, and He recalls that <i>"in the days of Jesus, it was those who were distinguished for their learning, the men of letters and religion, who denied Him, whilst humble fishermen made haste to gain admittance into the Kingdom"</i> (see also <a href="p165-251Notes.html#note172">note 172</a>). For additional information about Shaykh Ahmad-i-Ahsá'í see <i>The Dawn-Breakers</i>, chapters 1 and 10.<p>
+	  Shaykh Ahmad-i-Ahsá'í (1753-1831), who was the founder of the Shaykhí School and the first of the "twin luminaries that heralded the advent of the Faith of the Báb", prophesied that at the appearance of the Promised One all things would be reversed, the last would be first, the first <a name="p240"/> last. Bahá'u'lláh in one of His Tablets refers to the <i>"symbol and allusion"</i> of the <i>"mystery of the Great Reversal in the Sign of the Sovereign"</i>. He states: <i>"Through this reversal He hath caused the exalted to be abased and the abased to be exalted"</i>, and He recalls that <i>"in the days of Jesus, it was those who were distinguished for their learning, the men of letters and religion, who denied Him, whilst humble fishermen made haste to gain admittance into the Kingdom"</i> (see also <a href="p165-251Notes.html#note172">note 172</a>). For additional information about Shaykh Ahmad-i-Ahsá'í see <i>The Dawn-Breakers</i>, chapters <a href="../../Others/DBNN/p001-018Ch01.html">1</a> and <a href="../../Others/DBNN/p199-216Ch10.html#para4">10</a>.<p>
 	  </td>
 	  <td VALIGN=top><hr>
-  	  <small>[Shaykh Ahmad-i-Ahsá'í]: <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">vol. 2</a>, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#'Shaykh-i-Ahsá'í">vol. 4</a>
+  	  <small>[Shaykh Ahmad-i-Ahsá'í] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para176">p. 120</a> ; <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p001-018Ch01.html">ch. 1</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a>
 	  </small>
 	  </td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">240</DIV></center><p></small></td>
@@ -1900,7 +1900,8 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  The name for the letter "Váv" consists of three letters: Váv, Alif, Váv. According to the abjad reckoning, the numerical value of each of these letters is 6, 1 and 6 respectively. Shoghi Effendi in a letter written on his behalf to one of the believers in the East provides an interpretation of this verse of the Aqdas. He states that the <i>"Upright Alif"</i> refers to the advent of the Báb. The first letter with its value of six, which comes before the Alif, is a symbol of earlier Dispensations and Manifestations which predate the Báb, while the third letter, which also has a numerical value of six, stands for Bahá'u'lláh's supreme Revelation which was made manifest after the Alif.<p>
 	  </td>
 	  <td VALIGN=top><hr>
-  	  <small>[Shaykh Ahmad-i-Ahsá'í]: <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">vol. 2</a>, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#'Shaykh-i-Ahsá'í">vol. 4</a>
+  	  <small>[Shaykh Ahmad-i-Ahsá'í] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para176">p. 120</a> ; <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p001-018Ch01.html">ch. 1</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a><p>
+	  ["That letter, the letter 'váv'..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p199-216Ch10.html#para4">p. 201</a>
 	  </small>
 	  </td>
 	  <td>&nbsp;</td>
@@ -1960,7 +1961,9 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  Shaykh Muhammad-Hasan, one of the leading exponents of Shí'ih Islám, rejected the Báb. The author of voluminous <a name="p243"/> writings on Shí'ih jurisprudence, he is reported to have died around 1850.<p>
 	  Nabíl, in <i>The Dawn-Breakers</i>, describes the encounter that took place in Najaf between Mullá Aliy-i-Bastámí, one of the Letters of the Living, and Shaykh Muhammad-Hasan. During the meeting, Mullá Alí announced the manifestation of the Báb and extolled the potency of His Revelation. At the instigation of the shaykh, Mullá Alí was forthwith pronounced a heretic and expelled from the assembly. He was put on trial, transported to Istanbul, and condemned to hard labour.<p>
 	  </td>
-	  <td>&nbsp;</td>
+	  <td VALIGN=top><hr><small>
+	  <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p047-096Ch03.html#para49">p. 90</a>
+	  </small></td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">243</DIV></center><p></small></td>
 </tr>
 <tr>
@@ -1968,7 +1971,9 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <b><a name="note179"/>179. a sifter of wheat and barley <a href="p019-088Aqdas.html#para166">&para;166</a></b><p>
 	  This is an allusion to Mullá Muhammad Ja'far Gandum-Pák-Kun, the first person in Isfahán to accept the Faith of the Báb. He is mentioned in the Persian Bayán and praised as one who <i>"donned the robe of discipleship"</i>. In <i>The Dawn-Breakers</i>, Nabíl describes the unreserved acceptance of the Message by the "sifter of wheat" and his zealous advocacy of the new Revelation. He joined the company of the defenders of the Fort of Shaykh Tabarsi and perished during that siege.<p>
 	  </td>
-	  <td>&nbsp;</td>
+	  <td VALIGN=top><hr><small>
+	  <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p097-108Ch04.html#para5">p. 99</a>, <a href="../../Others/DBNN/p378-429Ch20.html#para166">p. 421</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para33">p. 19</a>;
+	  </small></td>
 	  <td>&nbsp;</td>
 </tr>
 <tr>
