--- a/Baha'i/Baha/KA/p252-254Glossary.html
+++ b/Baha'i/Baha/KA/p252-254Glossary.html
@@ -35,7 +35,7 @@
 <table border="0" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
        <td width="80%"><center><h2>GLOSSARY</h2></center><p>
-	   <a name="`Abdu'l-Bahá"></a><b>`Abdu'l-Bahá</b>
+	   <a name="'Abdu'l-Bahá"></a><b>'Abdu'l-Bahá</b>
 	   <blockquote>The "Servant of Bahá", 'Abbás Effendi (1844-1921), the eldest son and appointed Successor of Bahá'u'lláh, and the Centre of His Covenant.</blockquote>
 	   <a name="Abjad"></a><b>Abjad</b>
 	   <blockquote>The ancient Arabic system of allocating a numerical value to letters of the alphabet, so that numbers may be represented by letters and vice versa.  Thus every word has both a literal meaning and a numerical value.</blockquote>
@@ -76,7 +76,7 @@
 <tr>
        <td>
 	   <a name="ShoghiEffendi"></a><b>Shoghi Effendi</b>
-	   <blockquote>Shoghi Effendi (1897-1957), Guardian of the Bahá'i Faith from 1921-1957.  He was the eldest grandson of `Abdu'l-Bahá and was appointed by Him as the Head of the Faith.</blockquote>
+	   <blockquote>Shoghi Effendi (1897-1957), Guardian of the Bahá'i Faith from 1921-1957.  He was the eldest grandson of 'Abdu'l-Bahá and was appointed by Him as the Head of the Faith.</blockquote>
 	   <a name="Síyáh-Chál"></a><b>Síyáh-Chál</b>
 	   <blockquote>Literally "the Black Pit".  The dark, foul-smelling, subterranean dungeon in Tihrán where Bahá'u'lláh was imprisoned for four months in 1852.</blockquote>
 	   </td>
